feat: controller 추가

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ky": "^1.14.3",
     "next": "16.1.6",
+    "pathe": "^2.0.3",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
